# queue_operator

./: Cargo.toml  queue-example.yaml  queue.example.com.yaml  test.sh
src/: crd.rs  finalizer.rs  main.rs  queue.rs
