[package]
name = "queue_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.91.0", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.22", default-features = false, features = [
    "v1_30",
] } # Kube-rs depends on k8s-openapi
tokio = { version="1.38.0", features=["macros", "rt-multi-thread" ] }
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
futures = "0.3"
thiserror = "1"